--- a/panda-website/locale/zh.json
+++ b/panda-website/locale/zh.json
@@ -3,15 +3,15 @@
     "tel": "4000-515-000",
     "headerTitle": "茬白稻唯一加盟电话",
     "locale": "CN",
-    "products": [
-      "茉莉奶绿",
-      "杨枝甘露",
-      "西瓜啵啵",
-      "超级杯水果茶",
-      "招牌芋圆奶茶",
-      "芒芒生打椰",
-      "青提茉莉"
-    ],
+    "products": {
+      "product1": "茉莉奶绿",
+      "product2": "杨枝甘露",
+      "product3": "西瓜啵啵",
+      "product4": "超级杯水果茶",
+      "product5": "招牌芋圆奶茶",
+      "product6": "芒芒生打椰",
+      "product7": "青提茉莉"
+    },
     "footerInfo": {
       "name": "四川蜀蜀蜀蜀企业管理咨询有限公司",
       "beian": {
