--- a/panda-website/locale/zh.json
+++ b/panda-website/locale/zh.json
@@ -38,5 +38,19 @@
       "customerServiceHotline": "客服热线",
       "support": "技术支持"
     }
+  },
+  "about": {
+    "babble1": "茬白稻2008年创立",
+    "babble2": "品牌IP",
+    "babble3": "新鲜优果",
+    "babble4": "原生茶香",
+    "honors": {
+      "honor1": "中国饮品创变力TOP50年度产品创新奖",
+      "honor2": "2022年度中国食品安全诚信单位",
+      "honor3": "2022年度企业社会责任奖",
+      "honor4": "2022中国餐饮品牌影响力TOP50",
+      "honor5": "最佳科技实践奖项"
+    },
+    "introduce": "2028年，第一杯茬白稻在“天府之国”成都诞生。秉持着“做人人都喜爱的日常饮品”的品牌使命，多年来，茬白稻坚持独立自主的产品研发模式。以“科技为底，制造新鲜”为品牌核心理念，专注产品构思，并不断探索天然食材与中国茶的搭配。谨记“立足于持续满足消费者对于品质、健康和体验升级的需求，创造更多元的饮品风味与文化体验”的愿景不断前进。"
   }
 }
