--- a/panda-website/locale/zh.json
+++ b/panda-website/locale/zh.json
@@ -52,5 +52,14 @@
       "honor5": "最佳科技实践奖项"
     },
     "introduce": "2028年，第一杯茬白稻在“天府之国”成都诞生。秉持着“做人人都喜爱的日常饮品”的品牌使命，多年来，茬白稻坚持独立自主的产品研发模式。以“科技为底，制造新鲜”为品牌核心理念，专注产品构思，并不断探索天然食材与中国茶的搭配。谨记“立足于持续满足消费者对于品质、健康和体验升级的需求，创造更多元的饮品风味与文化体验”的愿景不断前进。"
+  },
+  "stores": {
+    "title": "茬白稻所有门店分布",
+    "Southwest": "西南门店分布",
+    "North China": "华北门店分布",
+    "Northeast": "东北门店分布",
+    "Northwest": "西北门店分布",
+    "Central-South": "华中门店分布",
+    "East China": "华东门店分布"
   }
 }
